--- a/kubernetes/apps/longhorn-system/namespace.yaml
+++ b/kubernetes/apps/longhorn-system/namespace.yaml
@@ -1,8 +1,8 @@
----
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: longhorn-system
-  labels:
-    kustomize.toolkit.fluxcd.io/prune: "true"
-    goldilocks.fairwinds.com/enabled: "true"
+# ---
+# apiVersion: v1
+# kind: Namespace
+# metadata:
+#   name: longhorn-system
+#   labels:
+#     kustomize.toolkit.fluxcd.io/prune: "true"
+#     goldilocks.fairwinds.com/enabled: "true"
