--- a/kubernetes/apps/monitoring/kustomization.yaml
+++ b/kubernetes/apps/monitoring/kustomization.yaml
@@ -9,7 +9,7 @@ resources:
   - ./vpa/ks.yaml
   - ./kube-prometheus-stack/ks.yaml
   # - ./grafana/ks.yaml
-  - ./helm-dashboard/ks.yaml
+  # - ./helm-dashboard/ks.yaml
   # - ./loki/ks.yaml
   # - ./vector/ks.yaml
   # - ./thanos/ks.yaml
