--- a/kubernetes/apps/media/namespace.yaml
+++ b/kubernetes/apps/media/namespace.yaml
@@ -1,7 +1,8 @@
----
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: media
-  labels:
-    kustomize.toolkit.fluxcd.io/prune: disabled
+# ---
+# apiVersion: v1
+# kind: Namespace
+# metadata:
+#   name: media
+#   labels:
+#     kustomize.toolkit.fluxcd.io/prune: disabled
+#     goldilocks.fairwinds.com/enabled: "true"
