--- a/kubernetes/flux/repositories/helm/kustomization.yaml
+++ b/kubernetes/flux/repositories/helm/kustomization.yaml
@@ -21,7 +21,7 @@ resources:
   - ./k8s-gateway.yaml
   - ./komodorio.yaml
   - ./kubernetes-dashboard.yaml
-  - ./longhorn.yaml
+  # - ./longhorn.yaml
   - ./metallb.yaml
   - ./metrics-server.yaml
   - ./node-feature-discovery.yaml
