--- a/kubernetes/apps/media/namespace.yaml
+++ b/kubernetes/apps/media/namespace.yaml
@@ -1,8 +1,8 @@
-# ---
-# apiVersion: v1
-# kind: Namespace
-# metadata:
-#   name: media
-#   labels:
-#     kustomize.toolkit.fluxcd.io/prune: disabled
-#     goldilocks.fairwinds.com/enabled: "true"
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: media
+  labels:
+    kustomize.toolkit.fluxcd.io/prune: disabled
+    goldilocks.fairwinds.com/enabled: "true"
