--- a/kubernetes/apps/monitoring/kustomization.yaml
+++ b/kubernetes/apps/monitoring/kustomization.yaml
@@ -5,7 +5,7 @@ resources:
   - ./namespace.yaml
   - ./kubernetes-dashboard/ks.yaml
   - ./goldilocks/ks.yaml
-  - ./influxdb/ks.yaml
+  # - ./influxdb/ks.yaml
   - ./vpa/ks.yaml
   - ./kube-prometheus-stack/ks.yaml
   # - ./grafana/ks.yaml
