--- a/kubernetes/apps/monitoring/influxdb/app/helm-release.yaml
+++ b/kubernetes/apps/monitoring/influxdb/app/helm-release.yaml
@@ -9,7 +9,7 @@ spec:
   chart:
     spec:
       chart: influxdb
-      version: 4.12.0
+      version: 4.12.1
       sourceRef:
         kind: HelmRepository
         name: influxdata
@@ -19,7 +19,8 @@ spec:
   values:
     image:
       repository: influxdb
-      tag: 1.8.5-alpine
+      #tag: 1.8.5-alpine
+      tag: 1.8.10
   # template:
   #   spec:
   #     volumes:
