--- a/kubernetes/apps/networking/authentik/app/helm-release.yaml
+++ b/kubernetes/apps/networking/authentik/app/helm-release.yaml
@@ -68,6 +68,6 @@ spec:
       postgresqlPassword: ${SECRET_AUTHENTIK_POSTGRES_PASSWORD}
     redis:
       enabled: true
-      master:
-        persistence:
-          existingClaim: pvc-authentik
+      # master:
+      #   persistence:
+      #     existingClaim: pvc-authentik
