--- a/kubernetes/apps/networking/authentik/app/kustomization.yaml
+++ b/kubernetes/apps/networking/authentik/app/kustomization.yaml
@@ -2,6 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: networking
 resources:
-  - pvc.yaml
+  # - pvc.yaml
   - helm-release.yaml
   - ingress.yaml
