--- a/kubernetes/apps/default/pg/pgadmin/pg-pvc.yaml
+++ b/kubernetes/apps/default/pg/pgadmin/pg-pvc.yaml
@@ -15,9 +15,9 @@ spec:
     server: 192.168.1.2
     path: "/volume1/network-storage/pgadmin"
     readOnly: false
-  mountOptions:
-    - nfsvers=4.1
-    - hard
+  # mountOptions:
+  #   - nfsvers=4.1
+  #   - hard
     # - noatime
     # - nodiratime
     # - tcp
