--- a/kubernetes/apps/networking/authentik/app/helm-release.yaml
+++ b/kubernetes/apps/networking/authentik/app/helm-release.yaml
@@ -70,5 +70,5 @@ spec:
       enabled: true
       master:
         persistence:
-          storageClass: local-path
-          #existingClaim: pvc-authentik
+          existingClaim: pvc-authentik
+          #storageClass: local-path
