--- a/kubernetes/apps/media/sabnzbd/app/helmrelease.yaml
+++ b/kubernetes/apps/media/sabnzbd/app/helmrelease.yaml
@@ -32,7 +32,7 @@ spec:
         reloader.stakater.com/auto: "true"
     image:
       repository: ghcr.io/onedr0p/sabnzbd
-      tag: 3.7.2@sha256:1650ac838f239899cb3701fd28ffb551e2abdc6b3001d6c19bd80dca0564ec2a
+      tag: 3.7.2@sha256:c493413f6f333b3e4dfba1f740fcec8601e4c50f79af864448dc42836ba7f932
       # volumeMounts:
       #   - name: config
       #     mountPath: /config
@@ -61,13 +61,12 @@ spec:
       fsGroupChangePolicy: "OnRootMismatch"
       supplementalGroups: [10000]
     volumeClaimTemplates:
-      - name: config
+      - name: pvc-sabnzbd-config
         mountPath: /config
         accessMode: ReadWriteOnce
-        size: 20Gi
-        storageClass: longhorn
-        labels:
-          snapshot.home.arpa/enabled: "true"
+        size: 21Gi
+        storageClass: sabnzbd-config
+
     # volumeClaimTemplates:
     #   - name: config
     #     mountPath: /config
