--- a/kubernetes/apps/media/sabnzbd/app/pvc-sab.yaml
+++ b/kubernetes/apps/media/sabnzbd/app/pvc-sab.yaml
@@ -13,7 +13,7 @@ spec:
   persistentVolumeReclaimPolicy: Retain
   nfs:
     server: 192.168.1.2
-    path: "/volume1/sabnzbd"
+    path: "/volume1/network-storage/sabnzbd"
     readOnly: false
 ---
 apiVersion: v1
