--- a/kubernetes/apps/media/sonarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/sonarr/app/helmrelease.yaml
@@ -51,19 +51,19 @@ spec:
       fsGroup: 568
       fsGroupChangePolicy: "OnRootMismatch"
       supplementalGroups: [10000]
-    volumeClaimTemplates:
-      - name: config
-        mountPath: /config
-        accessMode: ReadWriteOnce
-        size: 1Gi
-        storageClass: longhorn
-        labels:
-          snapshot.home.arpa/enabled: "true"
+    # volumeClaimTemplates:
+    #   - name: config
+    #     mountPath: /config
+    #     accessMode: ReadWriteOnce
+    #     size: 1Gi
+    #     storageClass: longhorn
+    #     labels:
+    #       snapshot.home.arpa/enabled: "true"
     persistence:
-      # config:
-      #   enabled: true
-      #   existingClaim: pvc-sonarr-config
-      #   mountPath: /config
+      config:
+        enabled: true
+        existingClaim: pvc-sonarr-config
+        mountPath: /config
       downloads:
         enabled: true
         existingClaim: pvc-downloads
