--- a/kubernetes/apps/media/radarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/radarr/app/helmrelease.yaml
@@ -50,15 +50,11 @@ spec:
       fsGroup: 568
       fsGroupChangePolicy: "OnRootMismatch"
       supplementalGroups: [10000]
-    volumeClaimTemplates:
-      - name: config
-        mountPath: /config
-        accessMode: ReadWriteOnce
-        size: 5Gi
-        storageClass: longhorn
-        labels:
-          snapshot.home.arpa/enabled: "true"
     persistence:
+      config:
+        enabled: true
+        existingClaim: pvc-radarr-config
+        mountPath: /config
       downloads:
         enabled: true
         existingClaim: pvc-downloads
