--- a/kubernetes/apps/kube-system/metrics-server/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/metrics-server/app/helmrelease.yaml
@@ -9,18 +9,22 @@ spec:
   chart:
     spec:
       chart: metrics-server
-      version: 3.8.3
+      version: 3.9.0
       sourceRef:
         kind: HelmRepository
         name: metrics-server
         namespace: flux-system
+  maxHistory: 3
   install:
     createNamespace: true
     remediation:
       retries: 3
   upgrade:
+    cleanupOnFail: true
     remediation:
       retries: 3
+  uninstall:
+    keepHistory: false
   values:
     args:
       - --kubelet-insecure-tls
