--- a/kubernetes/apps/kube-system/kustomization.yaml
+++ b/kubernetes/apps/kube-system/kustomization.yaml
@@ -11,5 +11,5 @@ resources:
   - ./nfs-subdir-external-provisioner/ks.yaml
   - ./local-path-provisioner/ks.yaml
   # - ./portainer/ks.yaml
-  - ./storage/ks.yaml
-  - ./minio/ks.yaml
+  # - ./storage/ks.yaml
+  # - ./minio/ks.yaml
