--- a/kubernetes/apps/networking/traefik/app/helmrelease.yaml
+++ b/kubernetes/apps/networking/traefik/app/helmrelease.yaml
@@ -106,7 +106,7 @@ spec:
       - --metrics.prometheus=true
       - --metrics.prometheus.entryPoint=metrics
     additionalArguments:
-      - --log.level=DEBUG
+      - --log.level=INFO
       - --log.filePath=/data/traefik/logs/traefik.log
       - --accessLog=true
       - --accesslog.filepath=/data/traefik/logs/access.log
