--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -8,7 +8,7 @@ resources:
   - ./weave-gitops/ks.yaml
   - ./whoami/ks.yaml
   - ./filebrowser/ks.yaml
-  # - ./nginx/ks.yaml
+  - ./nginx/ks.yaml
   # - ./plex/ks.yaml
   # - ./cloudnative-pg/ks.yaml
   # - ./pgadmin/ks.yaml
