--- a/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
@@ -9,7 +9,7 @@ spec:
   chart:
     spec:
       chart: grafana
-      version: 6.52.1
+      version: 6.52.4
       sourceRef:
         kind: HelmRepository
         name: grafana
@@ -68,18 +68,18 @@ spec:
       - mountPath: /var/lib/grafana
         name: grafana-data
 
-    # dashboardProviders:
-    #   dashboardproviders.yaml:
-    #     apiVersion: 1
-    #     providers:
-    #       - name: "default"
-    #         orgId: 1
-    #         folder: ""
-    #         type: file
-    #         disableDeletion: false
-    #         editable: true
-    #         options:
-    #           path: /var/lib/grafana/dashboards/default
+    dashboardProviders:
+      dashboardproviders.yaml:
+        apiVersion: 1
+        providers:
+          - name: "default"
+            orgId: 1
+            folder: ""
+            type: file
+            disableDeletion: false
+            editable: true
+            options:
+              path: /var/lib/grafana/dashboards/default
     datasources:
       datasources.yaml:
         apiVersion: 1
