--- a/.github/renovate/autoMerge.json5
+++ b/.github/renovate/autoMerge.json5
@@ -7,7 +7,16 @@
       "automerge": true,
       "automergeType": "branch",
       "ignoreTests": true,
-      "matchUpdateTypes": ["minor", "patch", "digest"]
+      "matchUpdateTypes": ["minor", "patch", "digest"],
+      "matchPackageNames": [
+        "ghcr.io/onedr0p/radarr",
+        "ghcr.io/onedr0p/sonarr",
+        "renovatebot/github-action",
+        "radarr",
+        "app-template",
+        "sabnzbd",
+        "sonarr"
+      ]
     }
   ]
 }
