--- a/kubernetes/apps/media/radarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/radarr/app/helmrelease.yaml
@@ -80,3 +80,11 @@ spec:
         scrapeTimeout: 1m
       prometheusRule:
         enabled: true
+      exporter:
+        image:
+          repository: ghcr.io/onedr0p/exportarr
+          tag: v1.2.6
+        env:
+          port: 9794
+          additionalMetrics: true
+          unknownQueueItems: true
