--- a/kubernetes/apps/media/sonarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/sonarr/app/helmrelease.yaml
@@ -85,3 +85,18 @@ spec:
         memory: 250Mi
       limits:
         memory: 2000Mi
+    metrics:
+      enabled: true
+      serviceMonitor:
+        interval: 3m
+        scrapeTimeout: 1m
+      prometheusRule:
+        enabled: true
+      exporter:
+        image:
+          repository: ghcr.io/onedr0p/exportarr
+          tag: v1.2.6
+        env:
+          port: 9794
+          additionalMetrics: true
+          unknownQueueItems: true
