--- a/kubernetes/apps/monitoring/kubernetes-dashboard/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kubernetes-dashboard/app/helmrelease.yaml
@@ -9,7 +9,7 @@ spec:
   chart:
     spec:
       chart: kubernetes-dashboard
-      version: 6.0.0
+      version: 6.0.6
       sourceRef:
         kind: HelmRepository
         name: kubernetes-dashboard
@@ -56,7 +56,7 @@ spec:
     #                 name: kubernetes-dashboard
     #                 port:
     #                   number: 443
-    # metricsScraper:
-    #   enabled: true
-    # serviceMonitor:
-    #   enabled: false
+    metricsScraper:
+      enabled: true
+    serviceMonitor:
+      enabled: false
