--- a/kubernetes/apps/monitoring/loki/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/loki/app/helmrelease.yaml
@@ -23,7 +23,7 @@ spec:
     spec:
       # renovate: registryUrl=https://grafana.github.io/helm-charts
       chart: loki-stack
-      version: 2.9.9
+      version: 2.9.10
       sourceRef:
         kind: HelmRepository
         name: grafana
@@ -35,8 +35,11 @@ spec:
       isDefault: false
       persistence:
         enabled: true
-        storageClassName: nfs-client
-        size: 2Gi
+        existingClaim: pvc-loki
+      # persistence:
+      #   enabled: true
+      #   storageClassName: nfs-client
+      #   size: 2Gi
       config:
         table_manager:
           retention_deletes_enabled: true
