--- a/kubernetes/apps/monitoring/kustomization.yaml
+++ b/kubernetes/apps/monitoring/kustomization.yaml
@@ -10,6 +10,6 @@ resources:
   - ./kube-prometheus-stack/ks.yaml
   - ./grafana/ks.yaml
   # - ./helm-dashboard/ks.yaml
-  - ./loki/ks.yaml
+  # - ./loki/ks.yaml
   # - ./vector/ks.yaml
   # - ./thanos/ks.yaml
