--- a/kubernetes/apps/networking/kustomization.yaml
+++ b/kubernetes/apps/networking/kustomization.yaml
@@ -6,11 +6,11 @@ resources:
   - ./cloudflare-ddns/ks.yaml
   - ./external-dns/ks.yaml
   - ./traefik/ks.yaml
-  #- ./k8s-gateway/ks.yaml
+  - ./authentik/ks.yaml
   - ./metallb/ks.yaml
+  - ./authelia/ks.yaml
+  #- ./k8s-gateway/ks.yaml
   #- ./traefik-forward-auth/ks.yaml
   #- wildcard-certificate
   #- traefik-error-pages
-  #- ./authelia/ks.yaml
   #- ./lldap/ks.yaml
-  - ./authentik/ks.yaml
