--- a/kubernetes/apps/networking/kustomization.yaml
+++ b/kubernetes/apps/networking/kustomization.yaml
@@ -8,7 +8,7 @@ resources:
   - ./traefik/ks.yaml
   - ./authentik/ks.yaml
   - ./metallb/ks.yaml
-  - ./authelia/ks.yaml
+  # - ./authelia/ks.yaml
   #- ./k8s-gateway/ks.yaml
   #- ./traefik-forward-auth/ks.yaml
   #- wildcard-certificate
