--- a/kubernetes/apps/networking/authelia/app/helm-release.yaml
+++ b/kubernetes/apps/networking/authelia/app/helm-release.yaml
@@ -12,7 +12,7 @@ spec:
       version: 0.8.57
       sourceRef:
         kind: HelmRepository
-        name: authelia-charts
+        name: authelia
         namespace: flux-system
   values:
     domain: "${SECRET_DOMAIN}"
