--- a/kubernetes/flux/repositories/helm/kustomization.yaml
+++ b/kubernetes/flux/repositories/helm/kustomization.yaml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  # - ./authelia.yaml
+  - ./authelia.yaml
   - ./authentik.yaml
   # - ./csi-driver-nfs.yaml
   - ./bitnami.yaml
