--- a/kubernetes/apps/networking/authelia/app/authelia-secrets.sops.yaml
+++ b/kubernetes/apps/networking/authelia/app/authelia-secrets.sops.yaml
@@ -6,7 +6,7 @@ metadata:
 ## sops --encrypt --in-place ./kubernetes/apps/networking/authelia/app/authelia-secrets.sops.yaml
 ## sops --decrypt ./kubernetes/apps/networking/authelia/app/authelia-secrets.sops.yaml | kubectl apply -f -
 stringData:
-    AUTHELIA_JWT: ENC[AES256_GCM,data:HgK0rlk6pedA6NKUNb/KSrI+GzqzzKOviv4WDNsITd3et9El2O4wYphS6GWl2GpBC4/CU4U0MC7+3QM8GrAnAQ==,iv:WBorPLr2GilETZJqshgo5tRl+EgGz4tmtf9vstbQ7BY=,tag:gaSgKWqV+6XKwJRc/T9VTg==,type:str]
+    JWT_TOKEN: ENC[AES256_GCM,data:cL18wjDDmRmNwkdwtyTlFAKu9JrkgL7BfXvM0fSo+eaOG6J/bJ3d7DbkYF5/8o7mpARlyjOkpkhMoYCLhln/2A==,iv:t5S/PMwGSFJ7Mx4D9ZpwOjluYisa/uWC9Q2oDPmQPyg=,tag:G8wxCWMUalAffFp6YgG8aA==,type:str]
     AUTHELIA_EMAIL: ENC[AES256_GCM,data:3bGP3CRLLw==,iv:NeifePTewbU/5x+e3Ukb2QfIiGPqxtHz64qX3hE3cbA=,tag:WtjvPi+QNMqVHmkGir6jXA==,type:str]
     AUTHELIA_PASSWORD: ENC[AES256_GCM,data:AcZkiX+DAreH,iv:eUAGe8biRLWImP1iKwy9YktRDQzfJZHyUdCIg1f91Qs=,tag:tTN3cQQe4YK+cfabOihYAg==,type:str]
     AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:Yrlx4wJ1iuM=,iv:KT1JCzpkgL2gpdUam+jTNRqox3Ztx9854QfAlBPp4SY=,tag:8OPjsGRTJF9W7j4UT7GO3g==,type:str]
@@ -25,8 +25,8 @@ sops:
             REc4Wi9vaXY1bkJ3enEvbm1CcE5KQ0EKgPtwSx9pwN2KHOY1WP6Ahnc9nJFHxev9
             xO20f4/D4LVd/yIDNx5awbAwys5ajAfpok1OXyYHAS+iKitwESIZiA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-04-15T17:18:40Z"
-    mac: ENC[AES256_GCM,data:6sZtBR4jiijeYSvNOeziEMmfiqTJfTUtfR+XEYm4feda3urK3PD/E9NZbq/zX4KmhkM4FStyJ76Bm1UFFtwvmX7CfVotVbemikL9q4uuhPlwXiNyJGTDfhb4DC3v8ZGCAHZwRUrBvBNdSS2GRSJKwXITrVpLSHzbB96o4ZfY2xs=,iv:XapJ3iygqnlpQaJ1V4dVOv8epgfViIw6XEk3JsAleAA=,tag:LmC1iskSTS78nLhKHQKyxA==,type:str]
+    lastmodified: "2023-04-15T18:22:24Z"
+    mac: ENC[AES256_GCM,data:KMlq2e9+LmymkcWC5pDXrsZ8h9xkw2mw1tHm5QVNcW+XoUx2Q8tPszvhSRL9Hi/w6wUFm9m/YE5LdNT8lSnIiySQLhlY2q0cfKUE8+c4FUrSVvGbXkBxXA5qCMRXYkm01kEuG28w+Tq/spb6FiP9gEq+EXx5SDYz13Pg69sate8=,iv:NFPpIiY4AxnExYA44b7TAmFrIRZEGYsWySqUegeRjAk=,tag:JukHQ622Qow3DHEyoUjrKg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
