--- a/kubernetes/apps/networking/authelia/app/helm-release.yaml
+++ b/kubernetes/apps/networking/authelia/app/helm-release.yaml
@@ -30,14 +30,14 @@ spec:
         AUTHELIA_THEME: grey
         AUTHELIA_TOTP_ISSUER: authelia.com
         AUTHELIA_WEBAUTHN_DISABLE: "true"
-        AUTHELIA_AUTHENTICATION_BACKEND_FILE_PATH: /config/users.yaml
-        AUTHELIA_AUTHENTICATION_BACKEND_FILE_PASSWORD_ALGORITHM: argon2
-        AUTHELIA_AUTHENTICATION_BACKEND_FILE_PASSWORD_ARGON2_VARIANT: argon2id
-        AUTHELIA_AUTHENTICATION_BACKEND_FILE_PASSWORD_ARGON2_ITERATIONS: 1
-        AUTHELIA_AUTHENTICATION_BACKEND_FILE_PASSWORD_ARGON2_KEY_LENGTH: 32
-        AUTHELIA_AUTHENTICATION_BACKEND_FILE_PASSWORD_ARGON2_SALT_LENGTH: 16
-        AUTHELIA_AUTHENTICATION_BACKEND_FILE_PASSWORD_ARGON2_MEMORY: 1024
-        AUTHELIA_AUTHENTICATION_BACKEND_FILE_PASSWORD_ARGON2_PARALLELISM: 8
+        # AUTHELIA_AUTHENTICATION_BACKEND_FILE_PATH: /config/users.yaml
+        # AUTHELIA_AUTHENTICATION_BACKEND_FILE_PASSWORD_ALGORITHM: argon2
+        # AUTHELIA_AUTHENTICATION_BACKEND_FILE_PASSWORD_ARGON2_VARIANT: argon2id
+        # AUTHELIA_AUTHENTICATION_BACKEND_FILE_PASSWORD_ARGON2_ITERATIONS: 1
+        # AUTHELIA_AUTHENTICATION_BACKEND_FILE_PASSWORD_ARGON2_KEY_LENGTH: 32
+        # AUTHELIA_AUTHENTICATION_BACKEND_FILE_PASSWORD_ARGON2_SALT_LENGTH: 16
+        # AUTHELIA_AUTHENTICATION_BACKEND_FILE_PASSWORD_ARGON2_MEMORY: 1024
+        # AUTHELIA_AUTHENTICATION_BACKEND_FILE_PASSWORD_ARGON2_PARALLELISM: 8
         #AUTHELIA_ACCESS_CONTROL_DEFAULT_POLICY: deny
         #AUTHELIA_ACCESS_CONTROL_RULES_DOMAIN
       resources:
