--- a/kubernetes/apps/networking/authelia/app/authelia-secrets.sops.yaml
+++ b/kubernetes/apps/networking/authelia/app/authelia-secrets.sops.yaml
@@ -10,6 +10,8 @@ stringData:
     AUTHELIA_EMAIL: ENC[AES256_GCM,data:3bGP3CRLLw==,iv:NeifePTewbU/5x+e3Ukb2QfIiGPqxtHz64qX3hE3cbA=,tag:WtjvPi+QNMqVHmkGir6jXA==,type:str]
     AUTHELIA_PASSWORD: ENC[AES256_GCM,data:AcZkiX+DAreH,iv:eUAGe8biRLWImP1iKwy9YktRDQzfJZHyUdCIg1f91Qs=,tag:tTN3cQQe4YK+cfabOihYAg==,type:str]
     AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:Yrlx4wJ1iuM=,iv:KT1JCzpkgL2gpdUam+jTNRqox3Ztx9854QfAlBPp4SY=,tag:8OPjsGRTJF9W7j4UT7GO3g==,type:str]
+    SESSION_ENCRYPTION_KEY: ENC[AES256_GCM,data:6TjJOtp90m/Mi3dEBHs4gZsLDQqRtb0sJlPxpfbyPiGc6c1k7iFbG2zzwlqPqEMQ1oVn8F1aBZIOUhJJ2sF77g==,iv:9RXcGeqPsTWJpbe/76JuFPDFvcasiCgj50/hki0z1OI=,tag:yBwdINxusAsXVIhkCfcSqA==,type:str]
+    STORAGE_ENCRYPTION_KEY: ENC[AES256_GCM,data:6WmFetEMdazAZCqPjhgDUK3zzb+4oWjIv/lDPMxNHgLzn383u2uEZUfFXvGLimzYEfyABRoFRYI2kbpYcnHOWQ==,iv:sVTWXAObIfV7VNGK5DNXJmiFuRMh6q0UqLS1m6JtjTc=,tag:6GV3PASETuOEDZrZT90nEw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -25,8 +27,8 @@ sops:
             REc4Wi9vaXY1bkJ3enEvbm1CcE5KQ0EKgPtwSx9pwN2KHOY1WP6Ahnc9nJFHxev9
             xO20f4/D4LVd/yIDNx5awbAwys5ajAfpok1OXyYHAS+iKitwESIZiA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-04-15T18:22:24Z"
-    mac: ENC[AES256_GCM,data:KMlq2e9+LmymkcWC5pDXrsZ8h9xkw2mw1tHm5QVNcW+XoUx2Q8tPszvhSRL9Hi/w6wUFm9m/YE5LdNT8lSnIiySQLhlY2q0cfKUE8+c4FUrSVvGbXkBxXA5qCMRXYkm01kEuG28w+Tq/spb6FiP9gEq+EXx5SDYz13Pg69sate8=,iv:NFPpIiY4AxnExYA44b7TAmFrIRZEGYsWySqUegeRjAk=,tag:JukHQ622Qow3DHEyoUjrKg==,type:str]
+    lastmodified: "2023-04-15T19:19:19Z"
+    mac: ENC[AES256_GCM,data:Gq6b4C2WgmNAr44d2Yg7PXG6pC628NMMiRg+Dp1NbklQmA/nfVuWBoERdx8OqoumnDTUuG0emEXQihTAXghSv9/+JtIxTP5XDkERiGIjVFhawD4KJukayWVMS9QazVGVhZ3z5agMWtfIr4JIxH+L4cTs03Sk1G3mwNcpXHsyqFU=,iv:F2M2FGCF1A+fEaPAMsjvihqvYPzWayx5nyRuyrGNQe8=,tag:GXDm8DUYq95RnhtVC2+ayw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
