--- a/kubernetes/apps/networking/authelia/app/users.yaml
+++ b/kubernetes/apps/networking/authelia/app/users.yaml
@@ -2,7 +2,7 @@
 kind: ConfigMap
 apiVersion: v1
 metadata:
-  name: authelia-users
+  name: authelia-config-users
   namespace: networking
 data:
   users_database.yml: |
