--- a/kubernetes/apps/networking/authelia/app/helm-release.yaml
+++ b/kubernetes/apps/networking/authelia/app/helm-release.yaml
@@ -92,13 +92,13 @@ spec:
           enabled: false
         postgres:
           enabled: false
-      notifier:
-        disable_startup_check: true
-        filesystem:
-          enabled: true
-          # filename: /config/notification.txt
-        smtp:
-          enabled: false
+      # notifier:
+      #   disable_startup_check: true
+      #   filesystem:
+      #     enabled: true
+      #     # filename: /config/notification.txt
+      #   smtp:
+      #     enabled: false
     secret:
       existingSecret: authelia-secrets
     persistence:
