--- a/kubernetes/apps/networking/authelia/app/kustomization.yaml
+++ b/kubernetes/apps/networking/authelia/app/kustomization.yaml
@@ -5,7 +5,8 @@ namespace: networking
 resources:
   - authelia-secrets.sops.yaml
   - users.yaml
-  - pvc-authelia.yaml
+  # - pvc-authelia.yaml
+  - pvc-authelia-nfs.yaml
   - ingress.yaml
   - helm-release.yaml
 labels:
