--- a/kubernetes/apps/networking/authelia/app/kustomization.yaml
+++ b/kubernetes/apps/networking/authelia/app/kustomization.yaml
@@ -6,7 +6,7 @@ resources:
   - authelia-secrets.sops.yaml
   - pvc-authelia.yaml
   - users.yaml
-#  - pvc-authelia-nfs.yaml
+  - pvc-authelia-nfs.yaml
   - ingress.yaml
   - helm-release.yaml
 labels:
