--- a/kubernetes/apps/networking/authelia/app/helm-release.yaml
+++ b/kubernetes/apps/networking/authelia/app/helm-release.yaml
@@ -23,7 +23,7 @@ spec:
         type: Recreate
       extraVolumeMounts:
         - name: config-users
-          mountPath: /config
+          mountPath: /data
       extraVolumes:
         - name: config-users
           configMap:
